<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_light"
    android:padding="21dp" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:layout_marginBottom="25dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/logo_supercode" />

    <TextView
        android:id="@+id/type_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text_dark"
        android:textSize="19sp"
        android:layout_marginBottom="17dp"
        android:text="@string/mailing_type_invite" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/secret_code_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@+id/go_btn"
            android:layout_marginRight="7dp"
            android:inputType="textCapCharacters"
            android:padding="10dp"
            android:textSize="18sp"
            android:textColor="@color/text_dark"
            android:background="@drawable/mailing_edittext" />

        <Button
            android:id="@+id/go_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="@drawable/yellow_btn"
            android:textSize="19sp"
            android:textStyle="bold"
            android:text="@string/mailing_go" />

    </RelativeLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/or_line_mailing"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:textSize="34sp"
        android:text="@string/mailing_or" />

    <TextView
        android:id="@+id/get_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:textColor="@color/text_dark"
        android:textSize="19sp"
        android:text="@string/mailing_get_invite"/>

    <TextView
        android:id="@+id/email_text"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="13dp"
        android:padding="10dp"
        android:textSize="18sp"
        android:gravity="center"
        android:textColor="@color/text_dark"
        android:background="@drawable/mailing_edittext"/>

    <Button
        android:id="@+id/send_btn"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/yellow_btn"
        android:textSize="19sp"
        android:textStyle="bold"
        android:text="@string/mailing_send" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|center_horizontal">

        <TextView
            android:id="@+id/reach_us_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_dark"
            android:textSize="13sp"
            android:text="@string/mailing_reach_us"
            android:layout_marginEnd="4dp"/>

        <TextView
            android:id="@+id/app_email_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_dark"
            android:textSize="13sp"
            android:text="@string/mailing_app_email" />
    </LinearLayout>

</LinearLayout>

