<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/optonautMain"
    android:orientation="vertical"
    android:padding="21dp"
    tools:context=".views.activity.CreateUsernameActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="84dp"
        android:layout_marginBottom="67dp"
        android:background="@drawable/logo_mailing_dark" />

    <TextView
        android:id="@+id/header_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/create_username_text"
        android:textSize="19sp"
        android:textStyle="bold"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="22dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/symbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:textSize="30sp"
            android:textStyle="bold"
            android:text="@string/create_username_symbol"
            android:textColor="@android:color/white" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edittext_dark"
            android:hint="@string/create_username_hint"
            android:paddingLeft="10dp"
            android:maxLength="12"
            android:textSize="19sp"
            android:textColorHint="@color/text_light"
            android:textColor="@color/text_yellow" />

    </LinearLayout>

    <TextView
        android:id="@+id/username_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="42dp"
        android:layout_marginBottom="15dp"
        android:textSize="15sp"
        android:textStyle="italic"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/create_btn"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/gray_btn"
        android:textSize="19sp"
        android:enabled="false"
        android:text="@string/create_username_create" />

</LinearLayout>
